# simple_state_machine_with_cmake

./: .gitignore  CMakeLists.txt  README.md  build.sh  cmakelists.txt  common_macros.cmake  state_machine_fpointer.c
buffer_interface/: CMakeLists.txt  buffer_interface.c
common/include/: traffic_light.h
common/src/: traffic_light.c
state_machine_traffic_light/: CMakeLists.txt  state_machine_fpointer.c
state_machine_traffic_light/common/include/: math_operations.h
state_machine_traffic_light/common/src/: math_operations.c  traffic_light.c
